<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:flowapp="http://schemas.android.com/apk/res-auto"
      xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/new_datapoint"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:title="@string/add_data_point"
        flowapp:showAsAction="always" />

    <!--<item android:id="@+id/search"-->
...
