...
    <string name="lowcardspacedialog">You have %%% MB of storage space left on this device\'s SD card. Once the SD card is full, you will no longer be able to collect data.</string>
    <string name="getgeo">Capture Location</string>
    <string name="updategeo">Recapture Location</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="elevation">Height</string>
    <string name="submitbutton">Submit</string>
    <string name="geodialog">Please enable location settings</string>
    <string name="settings">Settings</string>
    <string name="preferences_general_section">General</string>
    <string name="aboutlabel">About</string>
    <string name="otherinstructions">Please enter a description</string>
    <string name="deleteresponse">Delete Response</string>
    <string name="othertext">Other...</string>
    <string name="surveylanglabel">Survey Languages</string>
    <string name="scanbarcode">Scan Barcode</string>
    <string name="toosmallerr">Value is too small. Minimum value: </string>
    <string name="toolargeerr">Value is too large. Maximum value: </string>
    <string name="baddatatypeerr">Answer must be numeric</string>
    <string name="reloadsurveyslabel">Reload all surveys</string>
    <string name="reloadsurveysdesc">Deletes and re-downloads assigned surveys (only run if instructed)</string>
    <string name="conftitle">Please Confirm</string>
    <string name="reloadconftext">Are you sure you want to purge and re-download surveys?</string>
    <string name="langoption">Languages</string>
...
    <!--Project List (Survey Group) Activity-->
    <string name="delete_survey_dialog_message">Delete %1$s?</string>
    <!--Survey Activity-->
    <string name="error_responses">Some responses contain errors. You must review the following questions before you can submit:</string>
    <string name="error_question_mandatory">This response is required</string>
    <string name="repeat_answer">Please, repeat answer</string>
    <string name="error_answer_match">Answers do not match</string>
    <string name="error_img_preview">Can\'t load image preview</string>
    <string name="error_video_preview">Can\'t load video preview</string>
    <string name="caddisfly_test">Go to test</string>
    <string name="error_empty_form">Empty forms cannot be submitted. Please, add the corresponding responses first.</string>
    <string name="select">please select</string>
    <string name="clear_value_msg">Do you want to delete this value?</string>
...
